<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ /*
  ~  * Copyright 2026 SawCunha Open System - SawCunhaOS-Foundation
  ~  *
  ~  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  * you may not use this file except in compliance with the License.
  ~  * You may obtain a copy of the License at
  ~  *
  ~  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  */
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>br.com.sawcunhaos</groupId>
        <artifactId>scos-foundation</artifactId>
        <version>1.2.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>scos-foundation-jdempotent</artifactId>
    <name>SCOS Foundation Jdempotent</name>
    <description>Idempotency control module for preventing duplicate execution of critical operations in SCOS projects</description>
    <url>https://github.com/SawCunhaOS/SawCunhaOS-Foundation</url>
    <inceptionYear>2026</inceptionYear>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <scm>
        <url>https://github.com/SawCunhaOS/SawCunhaOS-Foundation</url>
        <connection>scm:git:git://github.com/SawCunhaOS/SawCunhaOS-Foundation.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/SawCunhaOS/SawCunhaOS-Foundation.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <developers>
        <developer>
            <id>sawcunha</id>
            <name>Sawcunha Community</name>
            <email>community@sawcunha.io</email>
            <url>https://github.com/sawcunha</url>
            <organization>SawCunha Open System</organization>
            <organizationUrl>https://github.com/SawCunhaOS</organizationUrl>
            <roles>
                <role>architect</role>
                <role>maintainer</role>
            </roles>
            <timezone>-3</timezone>
        </developer>
    </developers>

    <organization>
        <name>SawCunha Open System</name>
        <url>https://github.com/SawCunhaOS</url>
    </organization>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/SawCunhaOS/SawCunhaOS-Foundation/issues</url>
    </issueManagement>

    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://github.com/SawCunhaOS/SawCunhaOS-Foundation/actions</url>
    </ciManagement>


    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aop</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-aspects</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>de.siegmar</groupId>
            <artifactId>logback-gelf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>

        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
        </dependency>

        <!-- PolymorphicRedisSerializer moved from utils.configuration.cache to its own module
             (Story 1.10); utils had no other consumer here, so the dependency swaps rather than
             stacking (matches the target graph, AD-1: jdempotent -> core, jdempapi, cache, privacy). -->
        <dependency>
            <groupId>br.com.sawcunhaos</groupId>
            <artifactId>scos-foundation-cache</artifactId>
        </dependency>
        <dependency>
            <groupId>br.com.sawcunhaos</groupId>
            <artifactId>scos-foundation-privacy</artifactId>
        </dependency>
        <!-- Story 1.5: as 5 anotações @Jdempotent* agora vêm do módulo de contrato, não de utils. -->
        <dependency>
            <groupId>br.com.sawcunhaos</groupId>
            <artifactId>scos-foundation-jdempotent-api</artifactId>
        </dependency>

        <!-- Unit Test Dependencies-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Test-only: the mock test app (JdempotentTestApplication/PrimeNumbersController/
             CustomExceptionHandler under src/test) uses @ControllerAdvice/ResponseEntityExceptionHandler,
             which need spring-webmvc. Previously arrived transitively via scos-foundation-utils's
             spring-boot-starter-web; now explicit and test-scoped since no main-code class here needs
             it (Story 1.10 dropped the utils dependency in favor of scos-foundation-cache). -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- Test-only: JdempotentTestApplication's @ComponentScan("br.com.sawcunhaos.foundation")
             picks up scos-foundation-cache's ScosCacheConfiguration (@Validated ScosCacheProperties),
             which needs a Jakarta Bean Validation provider on the classpath at binding time or Spring
             Boot throws NoProviderFoundException. cache/pom.xml intentionally has no provider (AC #1:
             cache depends only on core + the 2 starters) — real consumers bring their own, same as
             validation/pom.xml already does for its own tests. -->
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>spring-mock-mvc</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <useReleaseProfile>false</useReleaseProfile>
                    <releaseProfiles>release</releaseProfiles>
                    <goals>deploy</goals>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>**/*ITTest.java</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!-- AD-6 (_bmad-output/planning-artifacts/architecture/architecture-SawCunhaOS-Foundation-2026-08-29/ARCHITECTURE-SPINE.md):
                 não gerenciado pelo scos-bom; mesma versão do maven-surefire-plugin já herdado
                 (Surefire e Failsafe são liberados em lockstep pelo Apache Maven). -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <includes>
                        <include>**/*ITTest.java</include>
                    </includes>
                    <failIfNoTests>true</failIfNoTests>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
